chore: run prettier and fix spelling

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ a:visited {
 
 code,
 .code {
-  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
   font-size: 1.125rem;
   line-height: 1.6;
   padding: 0;
