--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   line-height: 1.6;
-  font-size: 0.9em;
+  font-size: 12px;
   padding: 0 10px;
   margin: 60px auto;
   max-width: 850px;
@@ -15,6 +15,7 @@ body {
 
 .nes-container {
   border-color: white;
+  padding: 1.5rem 0.5rem;
 }
 
 .nes-container.with-title > .title {
