--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,17 @@ a {
 @media only screen and (max-width: 600px) {
   .title {
     flex-direction: column;
+    margin-top: auto;
+    margin-bottom: auto;
   }
   .title pre {
     display: block;
     margin: 0;
     font-size: 5vw;
+  }
+  .info {
+    margin-top: 20px;
+    margin-bottom: auto;
   }
 }
 
@@ -45,7 +51,7 @@ a {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 20px;
+  margin-top: 10px;
   top: 0;
   left: 0;
   right: 0;
@@ -59,7 +65,7 @@ button {
   background-color: black;
   color: rgb(43, 255, 0);
   border: none;
-  padding: 10px 20px;
+  padding: 0px;
   font-size: 11px;
   cursor: pointer;
 }
