style: add padding to buttons

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ button {
   background-color: black;
   color: rgb(43, 255, 0);
   border: none;
-  padding: 0px;
+  padding: 10px 0px;
   font-size: 11px;
   cursor: pointer;
 }
