--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ a {
     flex-direction: column;
     margin-top: auto;
     margin-bottom: auto;
+    overflow: hidden;
   }
   .title pre {
     display: block;
@@ -52,7 +53,7 @@ a {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 10px;
+  margin: 5px;
   top: 0;
   left: 0;
   right: 0;
@@ -77,6 +78,7 @@ button {
   align-items: center;
   justify-content: center;
   height: 100%;
+  margin: 5px;
   position: relative;
 }
 
@@ -91,6 +93,7 @@ button {
   padding-right: 2px;
   padding-top: 2px;
   padding-bottom: 2px;
+  margin: 5px;
 }
 
 .bio-content {
