--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,52 @@ li:before {
   font-size: 1vw;
 } */
 
+/* Animations */
+
+.matrix-effect {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.matrix-effect::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  background-color: black;
+  opacity: 0.8;
+}
+
+@keyframes matrix-letter {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(100%);
+  }
+}
+
+.matrix-effect span {
+  position: absolute;
+  display: inline-block;
+  font-family: 'Inconsolata', monospace;
+  font-size: 8px;
+  color: rgb(43, 255, 0);
+  animation: matrix-letter 5s linear infinite;
+}
+
 /* Light Mode */
+
 .light-mode {
   background-color: white;
   color: black;
@@ -201,4 +246,13 @@ li:before {
 .light-mode .buttons button {
   background-color: rgb(255, 255, 255); /* Update the button background color */
   color: black;
+}
+
+.light-mode .matrix-effect::before {
+  background-color: white;
+}
+
+.light-mode .matrix-effect span {
+  color: rgb(122, 122, 122);
+  text-shadow: none;
 }
