--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ a {
   position: fixed;
   top: 0;
   padding: 2px;
-  margin-top: 0;
+  margin-top: 5px;
   font-size: 10px;
   line-height: 1.5;
   text-align: center;
