--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ a {
 }
 .toast {
   position: fixed;
-  padding: 4px;
+  padding: 4px 8px;
+  border: 1px solid rgb(43, 255, 0);
   width: auto;
   margin-top: 0px;
   font-size: 10px;
@@ -313,5 +314,6 @@ li:before {
 .light-mode .toast {
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
+  border-color: black;
   text-shadow: none;
 }
