--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,19 @@
+/* Existing styles */
 body {
-  background-color: black;
+  background-color: rgb(16, 15, 15);
   color: rgb(43, 255, 0);
   text-shadow: 0 0 1px rgb(43, 255, 0), 0 0 1px rgb(43, 255, 0), 0 0 1px rgb(43, 255, 0);
   display: flex;
   flex-direction: column;
-  align-items: center; /* Aligns items horizontally at the center */
-  justify-content: center; /* Aligns items vertically at the center */
+  align-items: center;
+  justify-content: center;
   font-family: 'Inconsolata', monospace;
   height: 100svh;
   margin: 0;
 }
 
 .title {
-  margin-bottom: 40px; /* Adds space below the title */
+  margin-bottom: 40px;
   display: flex;
 }
 
@@ -22,23 +23,6 @@ body {
 
 a {
   color: rgb(43, 255, 0);
-}
-
-@media only screen and (max-width: 600px) {
-  .title {
-    flex-direction: column;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-  .title pre {
-    display: block;
-    margin: 0;
-    font-size: 80%;
-  }
-  .info {
-    margin-top: 20px;
-    margin-bottom: auto;
-  }
 }
 
 .info {
@@ -56,6 +40,11 @@ a {
   left: 0;
   right: 0;
 }
+
+.buttons-bio {
+  justify-content: space-around;
+}
+
 .toast {
   position: fixed;
   padding: 4px 8px;
@@ -66,7 +55,7 @@ a {
   line-height: 1.5;
   text-align: center;
   color: rgb(43, 255, 0);
-  background-color: black;
+  background-color: #090909;
   text-shadow: 0 0 0.5px rgb(43, 255, 0);
   display: none;
   animation: toasting 2s linear forwards;
@@ -87,7 +76,7 @@ a {
 }
 
 button {
-  background-color: black;
+  background-color: transparent;
   color: rgb(43, 255, 0);
   border: none;
   padding: 10px 0px;
@@ -111,16 +100,18 @@ button::after {
   align-items: center;
   justify-content: center;
   height: 100%;
+  width: 100%;
   margin: 5px;
   position: relative;
 }
 
 .bio-container {
-  background-color: black;
+  background-color: #090909;
   z-index: 2;
   display: flex;
   flex-direction: column;
   border: 1px solid rgb(43, 255, 0);
+  max-width: 800px;
   justify-content: center;
   position: relative;
   font-size: 13px;
@@ -140,21 +131,21 @@ button::after {
   line-height: 1.5;
   overflow-y: auto !important;
   scrollbar-width: thick;
-  scrollbar-color: rgb(43, 255, 0) black;
+  scrollbar-color: rgb(43, 255, 0) #090909;
 }
 
 .bio-content::-webkit-scrollbar {
-  width: 8px; /* Set the width of the scrollbar */
+  width: 8px;
   margin-right: -1-0px;
 }
 
 .bio-content::-webkit-scrollbar-thumb {
-  background-color: rgb(43, 255, 0); /* Set the color of the scrollbar thumb */
+  background-color: rgb(43, 255, 0);
   border-radius: 0px;
 }
 
 .bio-content::-webkit-scrollbar-track {
-  background-color: black; /* Set the color of the scrollbar track */
+  background-color: #090909;
 }
 
 h3 {
@@ -177,31 +168,22 @@ li {
 }
 
 li:before {
-  content: '*'; /* Set the ">" symbol as the content */
-  margin-right: 5px; /* Add some space between the symbol and the text */
+  content: '*';
+  margin-right: 5px;
 }
 
-/* 
-.avatar {
-  display: flex;
-  width: auto;
-  justify-content: center;
-  margin-top: auto;
-  margin-bottom: auto;
-  font-size: 1vw;
-} */
+/* Matrix effect */
 
 /* Animations */
 
 .matrix-effect {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   pointer-events: none;
   overflow: hidden;
-  z-index: -1;
 }
 
 .matrix-effect::before {
@@ -212,7 +194,6 @@ li:before {
   right: 0;
   bottom: 0;
   pointer-events: none;
-  background-color: black;
   opacity: 0.8;
 }
 
@@ -249,61 +230,159 @@ li:before {
   animation: matrix-letter 5s linear infinite;
 }
 
+/* CRT screen effect */
+
+.screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #090909;
+  width: 80vw;
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #1c1c1c;
+  transition: opacity 0.5s;
+}
+
+.screen::after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(18, 16, 16, 0.9);
+  opacity: 0;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.container.on {
+  animation: turn-off 1s linear 0s, turn-on 1s linear 2s;
+  animation-fill-mode: forwards;
+}
+
+.container.on .screen::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.75) 50%);
+  z-index: 2;
+  background-size: 100% 2px, 3px 100%;
+  pointer-events: none;
+}
+
+.container.on .screen::after {
+  animation: flicker 0.15s infinite;
+}
+
+@keyframes turn-on {
+  0% {
+    transform: scale(1, 0.8) translate3d(0, 0, 0);
+    filter: brightness(30);
+    opacity: 0.2;
+  }
+  3.5% {
+    transform: scale(1, 0.8) translate3d(0, 100%, 0);
+  }
+  3.6% {
+    transform: scale(1, 0.8) translate3d(0, -100%, 0);
+    opacity: 0.5;
+  }
+  9% {
+    transform: scale(1.3, 0.6) translate3d(0, 100%, 0);
+    filter: brightness(5);
+    opacity: 0;
+  }
+  51% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    filter: contrast(0) brightness(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    filter: contrast(1) brightness(1.2) saturate(1.3);
+    opacity: 1;
+  }
+}
+
+@keyframes turn-off {
+  0% {
+    transform: scale(1, 1.3) translate3d(0, 0, 0);
+    filter: brightness(1);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(1.3, 0.001) translate3d(0, 0, 0);
+    filter: brightness(2);
+  }
+  100% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: scale(0, 0.0001) translate3d(0, 0, 0);
+    filter: brightness(8);
+  }
+}
+
+#switch:checked ~ .screen {
+  animation: turn-on 4s linear;
+  animation-fill-mode: forwards;
+}
+
 /* Light Mode */
 
 .light-mode {
-  background-color: white;
-  color: black;
+  color: #090909;
 }
 
 .light-mode .title pre {
-  color: black;
+  color: #090909;
 }
 
 .light-mode .bio-container {
-  border-color: black;
-  background-color: white;
+  border-color: #090909;
+  background-color: lightgray;
 }
 
 .light-mode .bio-container .bio-content {
   text-shadow: none;
-  border-color: black;
+  border-color: #090909;
 }
 
 .light-mode .bio-container .bio-content::-webkit-scrollbar-thumb {
-  background-color: black;
+  background-color: #090909;
 }
 
 .light-mode .bio-container .bio-content::-webkit-scrollbar-track {
-  background-color: white;
+  background-color: lightgray;
 }
 
 .light-mode .info {
-  color: black;
+  color: #090909;
   text-shadow: none;
 }
 
 .light-mode a {
-  color: black;
+  color: #090909;
 }
 
 .light-mode button {
-  background-color: white;
-  color: black;
+  color: #090909;
 }
 
 .light-mode .title pre {
-  color: black;
+  color: #090909;
   text-shadow: none; /* Remove text shadow in light mode */
 }
 
-.light-mode .buttons button {
-  background-color: rgb(255, 255, 255); /* Update the button background color */
-  color: black;
-}
-
 .light-mode .matrix-effect::before {
-  background-color: white;
+  background-color: transparent;
 }
 
 .light-mode .matrix-effect span {
@@ -312,8 +391,43 @@ li:before {
 }
 
 .light-mode .toast {
-  color: rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
-  border-color: black;
+  color: #090909;
+  background-color: lightgray;
+  border-color: #090909;
   text-shadow: none;
+}
+
+.light-mode .screen {
+  border: 1px solid #878787;
+  background-color: lightgray;
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    flex-direction: column;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .title pre {
+    display: block;
+    margin: 0;
+    font-size: 80%;
+  }
+
+  .info {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+
+  .container {
+    margin: 0;
+  }
+
+  .screen {
+    border: none;
+    width: unset;
+    padding: 5px;
+    height: 100%;
+  }
 }
