--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,6 +240,7 @@ li:before {
   background: #090909;
   width: 80vw;
   height: 80vh;
+  padding: 20px;
   position: relative;
   overflow: hidden;
   border: 1px solid #1c1c1c;
