--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   font-family: 'Inconsolata', monospace;
-  height: 100svh;
+  height: 100vh;
   margin: 0;
 }
 
