--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   font-family: 'Inconsolata', monospace;
-  height: 100vh;
+  height: 100lvh;
   margin: 0;
 }
 
@@ -234,16 +234,15 @@ li:before {
 
 .screen {
   display: flex;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: #090909;
-  width: 80vw;
-  height: 80vh;
   padding: 20px;
   position: relative;
   overflow: hidden;
-  border: 1px solid #1c1c1c;
   transition: opacity 0.5s;
 }
 
@@ -399,7 +398,6 @@ li:before {
 }
 
 .light-mode .screen {
-  border: 1px solid #878787;
   background-color: lightgray;
 }
 
