--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,11 @@
-/* Existing styles */
+:root {
+  --main-color: #faf8f8;
+  --accent-color: #191919;
+}
+
 body {
-  background-color: rgb(16, 15, 15);
-  color: rgb(43, 255, 0);
-  text-shadow: 0 0 1px rgb(43, 255, 0), 0 0 1px rgb(43, 255, 0), 0 0 1px rgb(43, 255, 0);
+  background-color: var(--main-color);
+  color: var(--accent-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,13 +25,12 @@ body {
 }
 
 a {
-  color: rgb(43, 255, 0);
+  color: var(--accent-color);
 }
 
 .info {
   text-align: center;
   font-size: 11px;
-  text-shadow: 0 0 1px rgb(43, 255, 0);
   line-height: 1.5;
 }
 
@@ -48,15 +50,14 @@ a {
 .toast {
   position: fixed;
   padding: 4px 8px;
-  border: 1px solid rgb(43, 255, 0);
+  border: 1px solid var(--accent-color);
   width: auto;
   margin-top: 0px;
   font-size: 10px;
   line-height: 1.5;
   text-align: center;
-  color: rgb(43, 255, 0);
-  background-color: #090909;
-  text-shadow: 0 0 0.5px rgb(43, 255, 0);
+  color: var(--accent-color);
+  background-color: var(--main-color);
   display: none;
   animation: toasting 2s linear forwards;
 }
@@ -77,7 +78,7 @@ a {
 
 button {
   background-color: transparent;
-  color: rgb(43, 255, 0);
+  color: var(--accent-color);
   border: none;
   padding: 10px 0px;
   font-size: 11px;
@@ -106,16 +107,15 @@ button::after {
 }
 
 .bio-container {
-  background-color: #090909;
+  background-color: var(--main-color);
   z-index: 2;
   display: flex;
   flex-direction: column;
-  border: 1px solid rgb(43, 255, 0);
+  border: 1px solid var(--accent-color);
   max-width: 800px;
   justify-content: center;
   position: relative;
   font-size: 13px;
-  text-shadow: 0 0 1px rgb(43, 255, 0);
   padding-right: 2px;
   padding-top: 2px;
   padding-bottom: 2px;
@@ -131,7 +131,7 @@ button::after {
   line-height: 1.5;
   overflow-y: auto !important;
   scrollbar-width: thick;
-  scrollbar-color: rgb(43, 255, 0) #090909;
+  scrollbar-color: var(--accent-color) var(--main-color);
 }
 
 .bio-content::-webkit-scrollbar {
@@ -140,12 +140,12 @@ button::after {
 }
 
 .bio-content::-webkit-scrollbar-thumb {
-  background-color: rgb(43, 255, 0);
+  background-color: var(--accent-color);
   border-radius: 0px;
 }
 
 .bio-content::-webkit-scrollbar-track {
-  background-color: #090909;
+  background-color: var(--main-color);
 }
 
 h3 {
@@ -226,7 +226,7 @@ li:before {
   pointer-events: none;
   font-family: 'Inconsolata', monospace;
   font-size: 8px;
-  color: rgb(43, 255, 0);
+  color: var(--accent-color);
   animation: matrix-letter 5s linear infinite;
 }
 
@@ -239,7 +239,7 @@ li:before {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #090909;
+  background: var(--main-color);
   padding: 20px;
   position: relative;
   overflow: hidden;
@@ -333,72 +333,6 @@ li:before {
 #switch:checked ~ .screen {
   animation: turn-on 4s linear;
   animation-fill-mode: forwards;
-}
-
-/* Light Mode */
-
-.light-mode {
-  color: #090909;
-}
-
-.light-mode .title pre {
-  color: #090909;
-}
-
-.light-mode .bio-container {
-  border-color: #090909;
-  background-color: lightgray;
-}
-
-.light-mode .bio-container .bio-content {
-  text-shadow: none;
-  border-color: #090909;
-}
-
-.light-mode .bio-container .bio-content::-webkit-scrollbar-thumb {
-  background-color: #090909;
-}
-
-.light-mode .bio-container .bio-content::-webkit-scrollbar-track {
-  background-color: lightgray;
-}
-
-.light-mode .info {
-  color: #090909;
-  text-shadow: none;
-}
-
-.light-mode a {
-  color: #090909;
-}
-
-.light-mode button {
-  color: #090909;
-}
-
-.light-mode .title pre {
-  color: #090909;
-  text-shadow: none; /* Remove text shadow in light mode */
-}
-
-.light-mode .matrix-effect::before {
-  background-color: transparent;
-}
-
-.light-mode .matrix-effect span {
-  color: rgb(122, 122, 122);
-  text-shadow: none;
-}
-
-.light-mode .toast {
-  color: #090909;
-  background-color: lightgray;
-  border-color: #090909;
-  text-shadow: none;
-}
-
-.light-mode .screen {
-  background-color: lightgray;
 }
 
 @media only screen and (max-width: 600px) {
