--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,11 @@ body {
 }
 
 .title pre {
-  font-size: 1vw;
+  font-size: 100%;
+}
+
+.content {
+  width: min-content;
 }
 
 a {
@@ -80,6 +84,8 @@ a {
 
 .socials {
   margin-top: 10px;
+  margin-bottom: 5px;
+  width: max-content;
 }
 
 button {
@@ -87,7 +93,7 @@ button {
   color: var(--accent-color);
   border: none;
   padding: 10px 0px;
-  font-size: 11px;
+  font-size: 9px;
   cursor: pointer;
 }
 
@@ -230,7 +236,7 @@ li:before {
   display: inline-block;
   pointer-events: none;
   font-family: 'Inconsolata', monospace;
-  font-size: 8px;
+  font-size: 13px;
   color: var(--accent-color);
   animation: matrix-letter 5s linear infinite;
 }
@@ -357,6 +363,14 @@ li:before {
   .info {
     margin-top: 20px;
     margin-bottom: 30px;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .socials {
+    width: 100%;
   }
 
   .screen {
